--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -26,7 +26,7 @@ FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
 
 # Copy nginx configuration
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY docker/nginx.conf /etc/nginx/nginx.conf
 
 # Expose port
 EXPOSE 80
