--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 python-decouple==3.8
-pydantic==2.5.0
+pydantic>=2.7.0
 pydantic-settings==2.1.0
 httpx==0.25.2
 aiofiles==23.2.1
