--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-fastapi==0.128.0
-uvicorn==0.40.0
+fastapi==0.100.0
+uvicorn==0.23.0
 sqlalchemy==2.0.45
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 python-decouple==3.8
-pydantic>=2.7.0
-pydantic-settings==2.1.0
+pydantic==1.10.5
+pydantic-settings==2.0.0
 httpx==0.25.2
 aiofiles==23.2.1
 jinja2==3.1.2
@@ -18,7 +18,7 @@ openpyxl==3.1.2
 playwright==1.40.0
 google-api-python-client==2.108.0
 google-auth-oauthlib==1.2.0
-instagrapi==1.17.1
+instagrapi>=1.17.1
 Pillow==10.1.0
 requests==2.31.0
 pyyaml==6.0.1
