--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY frontend/package*.json ./
 
 # Install all dependencies (including dev dependencies for build)
-RUN npm ci
+RUN npm install
 
 # Copy source code
 COPY frontend/ ./
